--- a/dropdown.html
+++ b/dropdown.html
@@ -84,6 +84,7 @@
         <div class="nav-bar">
             <h2>
                 BB Group
+                <input type="search" placeholder="Search">
             </h2>
             <div class="main-bar">
             <ul>
