--- a/dropdown.html
+++ b/dropdown.html
@@ -25,6 +25,10 @@
                 display:block;
                 background-color:rgb(248, 8, 156);
             }
+              #search{
+                  height:30px;
+                width:200px;
+              }
             .main-bar ul{
                 display:inline-flex;
                 list-style:none;
@@ -84,7 +88,7 @@
         <div class="nav-bar">
             <h2>
                 BB Group
-                <input type="search" placeholder="Search">
+                <input type="search" id="search" placeholder="Search">
             </h2>
             <div class="main-bar">
             <ul>
